force-app/main/default/objects/Live_Event__c/Live_Event__c.object-meta.xml
<CustomObject>
    <label>Live Event</label>
    <nameField>
        <label>Live Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Live Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>