force-app/main/default/objects/Live_Event__c/fields/Attendee_Segment__c.field-meta.xml
<CustomField>
    <fullName>Attendee_Segment__c</fullName>
    <label>Attendee Segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ducati Owner</fullName>
            </value>
            <value>
                <fullName>Non-Ducati Owner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>