force-app/main/default/objects/Live_Event__c/fields/Dealer__c.field-meta.xml
<CustomField>
    <fullName>Dealer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dealer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Live Events</relationshipLabel>
    <relationshipName>Live_Events</relationshipName>
    <type>Lookup</type>
</CustomField>