force-app/main/default/objects/Live_Event__c/fields/Facility_Square_Footage__c.field-meta.xml
<CustomField>
    <fullName>Facility_Square_Footage__c</fullName>
    <label>Facility Square Footage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>