force-app/main/default/objects/Live_Event__c/fields/Metro_Population__c.field-meta.xml
<CustomField>
    <fullName>Metro_Population__c</fullName>
    <label>Metro Population</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>