force-app/main/default/objects/Live_Event__c/fields/Predicted_Attendance__c.field-meta.xml
<CustomField>
    <fullName>Predicted_Attendance__c</fullName>
    <label>Predicted Attendance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>