force-app/main/default/objects/Live_Event__c/fields/Total_Invitation__c.field-meta.xml
<CustomField>
    <fullName>Total_Invitation__c</fullName>
    <label>Total Invitation</label>
    <summaryForeignKey>Invitation__c.Event__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>